# vagante-extract

./: .gitignore  Main.hs  Makefile  README.md  app-readme.txt  build-notes.txt  drop-onto-me.applescript  stack.yaml  vagante-extract.cabal
