name:               vagante-extract
version:            0.0.1
license:            BSD3
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10

executable vagante-extract
  build-depends:      base, zlib, bytestring, binary, directory, filepath
  main-is:            Main.hs
  ghc-options:        -Wall
  default-language:   Haskell2010
